update key ring implementation due to refactorings